bug fixes. TODO: align dots to center

--- a/style.css
+++ b/style.css
@@ -81,7 +81,6 @@ body {
   font-weight: 400;
   font-size: 16px;
   position: relative;
-  overflow-x: hidden;
   z-index: auto; }
 
 .buttonstyleACM{
